# Structure-Cloud

./: .gitignore
backend/: .env  Cargo.toml
backend/src/: database.rs  main.rs  utils.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  Query1.js  Query2.js  Query3.js  Query4.js  Query5.js  Query6.js  Query7.js  Query8.js  api_query.js  index.js
