[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.18"
actix-files = "0.6.0-beta.12"
dotenv = "0.15"
mongodb = { version = "2.1.0", features = ["bson-chrono-0_4"]}
futures = "0.3"
chrono = "0.4"
serde = "1.0"